Fixed bug #37987 (invalid return of file_exists() in safe mode).